@startuml

title __ADAPTER's Class Diagram__\n

  namespace Adapter {
    class Adapter.AdapterAvatar {
        - bgImageDrawable : Drawable
        - context : Context
        - imageContainer : List<RelativeLayout>
        - imageViews : List<ImageMsg>
        - inflater : LayoutInflater
        {static} - selectedImageAvatar : int
        + AdapterAvatar()
        + getItemCount()
        + onBindViewHolder()
        + onCreateViewHolder()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterAvatar.BaseViewHoder {
        ~ imageView : ImageView
        ~ BaseViewHoder()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterBackground {
        - bgImageDrawable : Drawable
        - context : Context
        - imageContainer : List<RelativeLayout>
        - imageViews : List<ImageMsg>
        - inflater : LayoutInflater
        {static} - selectedImageBackGround : int
        + AdapterBackground()
        + getItemCount()
        + onBindViewHolder()
        + onCreateViewHolder()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterBackground.BaseViewHoder {
        ~ imageView : ImageView
        ~ BaseViewHoder()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterChatMsg {
        - chatMsgs : List<ChatMsg>
        - inflater : LayoutInflater
        + AdapterChatMsg()
        + getCount()
        + getItem()
        + getView()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterChatMsg.ViewHolder {
        ~ content : TextView
        ~ icon : ImageView
        ~ username : TextView
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterMainViewPager {
        - fragmentList : List<Fragment>
        + AdapterMainViewPager()
        + addFragment()
        + getCount()
        + getItem()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterMomentItem {
        - context : Context
        - momentMsgList : List<MomentMsg>
        + AdapterMomentItem()
        + getItemCount()
        + onBindViewHolder()
        + onCreateViewHolder()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterMomentItem.BaseViewHolder {
        - good : ImageView
        - good_num : TextView
        - imageView : ImageView
        - isgood : boolean
        - moment : TextView
        - username : TextView
        ~ BaseViewHolder()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterUserItem {
        - context : Context
        - userItemMsgList : List<UserItemMsg>
        + AdapterUserItem()
        + getItemCount()
        + onBindViewHolder()
        + onCreateViewHolder()
    }
  }
  

  namespace Adapter {
    class Adapter.AdapterUserItem.BaseViewHolder {
        - ivAvatar : ImageView
        - tvSign : TextView
        - tvUsername : TextView
        + setUserItemMsg()
        ~ BaseViewHolder()
    }
  }
  

  Adapter.AdapterAvatar -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  Adapter.AdapterAvatar +-down- Adapter.AdapterAvatar.BaseViewHoder
  Adapter.AdapterAvatar.BaseViewHoder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  Adapter.AdapterBackground -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  Adapter.AdapterBackground +-down- Adapter.AdapterBackground.BaseViewHoder
  Adapter.AdapterBackground.BaseViewHoder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  Adapter.AdapterChatMsg -up-|> android.widget.ArrayAdapter
  Adapter.AdapterChatMsg +-down- Adapter.AdapterChatMsg.ViewHolder
  Adapter.AdapterMainViewPager -up-|> androidx.fragment.app.FragmentPagerAdapter
  Adapter.AdapterMomentItem -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  Adapter.AdapterMomentItem +-down- Adapter.AdapterMomentItem.BaseViewHolder
  Adapter.AdapterMomentItem.BaseViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  Adapter.AdapterUserItem -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  Adapter.AdapterUserItem +-down- Adapter.AdapterUserItem.BaseViewHolder
  Adapter.AdapterUserItem.BaseViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  Adapter.AdapterUserItem.BaseViewHolder o-- Util.UserItemMsg : userItemMsg


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
